@@ -62,7 +62,7 @@ void PBI_PROTO80_Initialise(int *argc, char *argv[])
 	*argc = j;
 
 	if (PBI_PROTO80_enabled) {
-		proto80rom = Util_malloc(0x800);
+		proto80rom = (UBYTE *)Util_malloc(0x800);
 		if (!Atari800_LoadImage(proto80_rom_filename, proto80rom, 0x800)) {
 			free(proto80rom);
 			PBI_PROTO80_enabled = FALSE;
